Reorganized, Cleaned up, Abstracted, and added deletion dependencies for notifications